# ProyectoFinal_CGA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/models/: Cube.fbx
assets/models/Coin/: Coin.mtl
assets/models/IceCreamCart/: IceCreamCart.fbx
assets/models/LowPolyBuilding/: mandiri.blend  mandiri.mtl  otherbuilding.mtl
assets/models/Microbus/: Microbus.fbx  Microbus.mtl
assets/models/OxxoStore/: OxxoStore.mtl
assets/models/Path/: Path.mtl
assets/models/Store/: Store.fbx  Store.mtl
assets/models/Tsuru/: Tsuru.mtl
shaders/: base.frag  base.vert  debug.frag  debug.vert  fb_pixel.frag  fb_pixel.vert  infinite_grid.frag  infinite_grid.vert  point_depth_shader.frag  point_depth_shader.geom  skybox_shader.frag  skybox_shader.vert
src/: DebugSettings.h  GameSettings.h  main.cpp
src/Components/: BuildingComponent.h  CoinComponent.h  FloorComponent.h  ObstacleComponent.h  PathComponent.h  RunnerComponent.h
src/Systems/: CoinSystem.cpp  CoinSystem.h  RunnerSystem.cpp  RunnerSystem.h
